--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Version 1.loader.js";
+      var loaderUrl = buildUrl + "/Version 1 - DF.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Version 1.data.gz",
-        frameworkUrl: buildUrl + "/Version 1.framework.js.gz",
-        codeUrl: buildUrl + "/Version 1.wasm.gz",
+        dataUrl: buildUrl + "/Version 1 - DF.data.unityweb",
+        frameworkUrl: buildUrl + "/Version 1 - DF.framework.js.unityweb",
+        codeUrl: buildUrl + "/Version 1 - DF.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "BMSC339 Dot Blot",
