--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Version 2 Saved DF.loader.js";
+      var loaderUrl = buildUrl + "/Version 3 resolution fix.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Version 2 Saved DF.data.unityweb",
-        frameworkUrl: buildUrl + "/Version 2 Saved DF.framework.js.unityweb",
-        codeUrl: buildUrl + "/Version 2 Saved DF.wasm.unityweb",
+        dataUrl: buildUrl + "/Version 3 resolution fix.data.unityweb",
+        frameworkUrl: buildUrl + "/Version 3 resolution fix.framework.js.unityweb",
+        codeUrl: buildUrl + "/Version 3 resolution fix.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "BMSC339 Dot Blot",
